--- a/sample/public/index.html
+++ b/sample/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="">Vue WebRTC</a>
+        <a class="navbar-brand" href="">你好！我是唠唠~</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
